<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="hello">Layoutübersicht:</string>
    <string name="app_name">Layouts</string>
    <string name="linear_lo">LinearLayout</string>
    <string name="table_lo">TableLayout</string>
    <string name="relative_lo">RelativeLayout</string>
    <string name="absolute_lo">AbsoluteLayout</string>
    <string name="frame_lo">FrameLayout</string>
    <string name="mare_image">Mare aux Sangliere</string>
    <string name="back">Züruck</string>

</resources>
