<?xml version="1.0" encoding="utf-8"?>

 <ScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   
    >
 
<LinearLayout
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     android:background="@color/red_t"
 
    android:orientation="vertical"
    tools:context=".LinearActivity" >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/headline_icon" />

    <TextView
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
         android:textColor="@color/blue"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/table_lo" />

    <Button
         android:textColor="@color/blue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_lo" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/absolute_lo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_lo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="B" />

</LinearLayout>
 </ScrollView>
