<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >
    <ImageView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:src="@drawable/headline_icon"
	android:layout_alignParentTop="true" />
    <ImageView
		android:id="@+id/image2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/empty_baseline_icon"
		android:layout_alignParentBottom="true" />
    <LinearLayout
	    android:id="@+id/zeile2"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/image2"
		
		android:gravity="center" >
		<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/absolute_lo" />
		<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/frame_lo" />
	</LinearLayout>
	 <LinearLayout
		android:id="@+id/zeile1"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/zeile2"
		android:gravity="center" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_lo" />

		<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/table_lo" />
	</LinearLayout>
	
    <TextView
        android:id="@+id/text"
         
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5px"
		android:gravity="center"
		android:layout_marginBottom="30px"
		android:textColor="#ffffffff"
		android:text="@string/hello"
		android:layout_alignParentBottom="true" />
   
</RelativeLayout>
