<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >
    <ImageView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:src="@drawable/headline_icon"
	android:layout_alignParentTop="true" />
    <TextView
        android:id="@+id/text"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5px"
	android:gravity="center"
	android:layout_marginBottom="5px"
	android:textColor="#ffffffff"
	android:text="@string/hello"
	android:layout_centerInParent="true" />
    <LinearLayout
		android:id="@+id/zeile1"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5px"
		android:layout_below="@id/text"
		android:gravity="center" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_lo" />

		<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/table_lo" />
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/zeile2"
	    android:layout_marginBottom="40px"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/zeile1"
		
		android:gravity="center" >
		<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/absolute_lo" />
		<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/frame_lo" />
	</LinearLayout>

<ImageView
 android:layout_below="@id/zeile2"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:src="@drawable/baseline_icon"
  android:layout_alignParentBottom="true"
 />
</RelativeLayout>
